--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "sass": "^1.72.0"
   },
   "devDependencies": {
